--- a/kloxo/httpdocs/theme/skin/simplicity/default/css/style.css
+++ b/kloxo/httpdocs/theme/skin/simplicity/default/css/style.css
@@ -10,7 +10,7 @@
 		scrollbar-track-color: #eff;
 		scrollbar-darkshadow-color: #369;
 		scrollbar-arrow-color: #fff;
-		font-size: 100%;
+		font-size: 9pt;
 	}
 
 	.menus {
@@ -106,14 +106,14 @@
 	.buttonunselect {
 		color: #fff;
 		font-weight: bold;
-		font-size: 85%;
+		font-size: 10pt;
 		font-family: Tahoma, Verdana, Arial, Helvetica, sans-serifs;
 	}
 
 	.buttonselect {
 		color: #369;
 		font-weight: bold;
-		font-size: 85%;
+		font-size: 10pt;
 		font-family: Tahoma, Verdana, Arial, Helvetica, sans-serifs;
 		background-color: #fff;
 		cursor: pointer;
@@ -205,7 +205,7 @@
 	.filebox {
 		font-family: Tahoma, Verdana, Arial, Helvetica, sans-serifs;
 		color: #000000;
-		font-size: 62.5%;
+		font-size: 8pt;
 		font-weight: normal;
 		background-color: #FFF;
 
@@ -278,13 +278,13 @@
 	.menu {
 		text-decoration: none;
 		color: #333333;
-		font-size: 75%;
+		font-size: 9pt;
 	}
 
 	.menu1 {
 		text-decoration: none;
 		color: #333333;
-		font-size: 62.5%;
+		font-size: 8pt;
 		font-weight: bold;
 	}
 
@@ -544,14 +544,14 @@
 		height: 20px;
 		background-color: #eee;
 		vertical-align: middle;
-		font-size: 75%;
+		font-size: 9pt;
 	}
 
 	.td11 {
 		height: 20px;
 		background-color: #eee;
 		vertical-align: middle;
-		font-size: 75%;
+		font-size: 9pt;
 	}
 
 	.td9 {
@@ -562,18 +562,18 @@
 	.ovr {
 		background-color: #bbb;
 		height: 20px;
-		font-size: 75%;
+		font-size: 9pt;
 	}
 
 	.a1 {
 		text-decoration: none;
-		font-size: 75%;
+		font-size: 9pt;
 		color: #069;
 	}
 
 	.c1 {
 		text-decoration: none;
-		font-size: 75%;
+		font-size: 9pt;
 		color: #000;
 	}
 
